Ingredient & Instruction Fragment Update

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,4 +25,7 @@
     <color name="chipTextColor">@color/darkGray</color>
 
     <color name="actionBarBackgroundColor">@color/colorPrimary</color>
+
+    <color name="stockColor">@color/lightGray</color>
+    <color name="cardBackgroundColor">@color/white</color>
 </resources>
