--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -25,7 +25,11 @@
         android:id="@+id/favoriteFragment"
         android:name="android.example.foodapp.ui.fragment.favorite.FavoriteFragment"
         android:label="@string/favorite_title"
-        tools:layout="@layout/fragment_favorite" />
+        tools:layout="@layout/fragment_favorite_recipes" >
+        <action
+            android:id="@+id/action_favoriteFragment_to_detailsActivity"
+            app:destination="@id/detailsActivity" />
+    </fragment>
     <fragment
         android:id="@+id/foodJokeFragment"
         android:name="android.example.foodapp.ui.fragment.foodjoke.FoodJokeFragment"
