--- a/app/src/main/res/layout/fragment_recipes.xml
+++ b/app/src/main/res/layout/fragment_recipes.xml
@@ -91,11 +91,12 @@
 
         <TextView
             android:id="@+id/error_textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/no_internet_connection"
             readApiResponse2="@{mainViewModel.recipesResponse}"
             readDatabase2="@{mainViewModel.readRecipes}"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="@string/no_internet_connection"
             android:textSize="20sp"
             android:textStyle="bold"
             android:visibility="invisible"
